tests/ui/auto_enum/rejected-by-rustc.stderr
error: expected `{`, found keyword `return`
 --> $DIR/rejected-by-rustc.rs:7:12
  |
7 |     } else return {
  |            ^^^^^^ expected `{`
help: try placing this code inside a block
  |
7 |     } else { return {
8 |         //~^ ERROR expected `{`, found keyword `return`
9 |         2..=10
10|     } }
  |

error: attributes are not yet allowed on `if` expressions
  --> $DIR/rejected-by-rustc.rs:18:9
   |
18 |         #[nested]
   |         ^^^^^^^^^
